--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@vbsvildb.directline.italy:1537:QOLDEV
-jdbc.username=PRD_USER
-jdbc.password=PRD_USER
+jdbc.url=jdbc:oracle:thin:@database:1521:SID
+jdbc.username=username
+jdbc.password=password
 jdbc.initialSize=1
 jdbc.maxActive=100
